--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ osu/
 scryptyLogs/
 battlecode22-scaffold/
 testdisk/
+repositories/aseprite/
+repositories/Quaver/
+repositories/visualboyadvance-m/
