--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,2 @@
-disconnall
-jump-cutter-revamped
-vscode/
-yarn/
-dolphin/
-progflow/
-electron/
-duckstation/
-PowerShell/
-rpcs3/
-terminal/
-yuzu/
-pcsx2/
-project64/
-xenia/
-LiveSplit/
-citra/
-CMake
-snes9x/
-CMake
-osu/
+repositories/
 scryptyLogs/
-battlecode22-scaffold/
-testdisk/
-repositories/aseprite/
-repositories/Quaver/
-repositories/visualboyadvance-m/
